--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,12 +41,16 @@ body {
 	color: rgb(var(--gray-dark));
 	font-size: 20px;
 	line-height: 1.7;
+	min-height: 95vh;
+	display: flex;
+	flex-direction: column;
 }
 main {
 	width: 720px;
 	max-width: calc(100% - 2em);
 	margin: auto;
 	padding: 3em 1em;
+	flex-grow: 1;
 }
 h1,
 h2,
