Add my chicken recipe why not

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,6 +10,8 @@ import { SITE_TITLE } from '../consts';
 			<HeaderLink href="/">Home</HeaderLink>
 			<HeaderLink href="/blog">Blog</HeaderLink>
 			<HeaderLink href="/about">About</HeaderLink>
+			<HeaderLink href="/recipes">Recipes</HeaderLink>
+
 		</div>
 		<div class="social-links">
 			<a href="https://github.com/lukeschaefer" target="_blank">
