--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -63,16 +63,16 @@ h6 {
 	line-height: 1.2;
 }
 h1 {
-	font-size: 3.052em;
+	font-size: 2.152em;
 }
 h2 {
-	font-size: 2.441em;
+	font-size: 1.841em;
 }
 h3 {
-	font-size: 1.953em;
+	font-size: 1.553em;
 }
 h4 {
-	font-size: 1.563em;
+	font-size: 1.363em;
 }
 h5 {
 	font-size: 1.25em;
@@ -130,12 +130,15 @@ hr {
 	border: none;
 	border-top: 1px solid rgb(var(--gray-light));
 }
+ol, ul {
+	padding-left: 1em;
+}
 @media (max-width: 720px) {
 	body {
-		font-size: 18px;
+		font-size: 16px;
 	}
 	main {
-		padding: 1em;
+		padding: .2em;
 	}
 }
 
