--- a/src/pages/recipes/index.astro
+++ b/src/pages/recipes/index.astro
@@ -46,6 +46,9 @@ const posts = (await getCollection('recipes')).sort(
 				color: rgb(var(--black));
 				line-height: 1;
 			}
+			img {
+				object-fit:cover;
+			}
 			.date {
 				margin: 0;
 				color: rgb(var(--gray));
